--- a/admin/assets/css/style.css
+++ b/admin/assets/css/style.css
@@ -1,3 +1,11 @@
+.header-nav {
+    width: 100%;
+    height: auto;
+    background-color: lightslategrey;
+    padding: 0.5%;
+}
+
+
 :root {
     --blue: #007bff;
     --indigo: #6610f2;
@@ -57,7 +65,8 @@ section {
 
 body {
     margin: 0;
-    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+    /* font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji"; */
+    font-family: 'Courier New', Courier, monospace;
     font-size: 1rem;
     font-weight: 400;
     line-height: 1.5;
